# game-of-life-core

./: Cargo.toml  index.js  package-lock.json  package.json
src/: main.rs
src/cli/: mod.rs  render_seeds.rs  validate_submissions.rs
src/core/: game.rs  history.rs  mod.rs
src/core/seeds/: mod.rs  seeds.rs
src/core/seeds/raw/: bim.rs  bits.rs  c.rs  coles.rs  cube.rs  forty_two.rs  glider.rs  hmm.rs  ligma.rs  mod.rs  mrsir.rs  smiley.rs  wall.rs  windmills.rs
