[package]
name = "game-of-life-core"
version = "0.1.0"
authors = ["Chris Griffing <cmgriffing@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
serde_derive = "1"
structopt = "0.3.13"
log = "0.4.8"
serde_json = "1.0"
