[package]
name = "game-of-life-core"
version = "0.1.0"
authors = ["Chris Griffing <cmgriffing@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.6"
log = "0.4.8"
serde = "1"
serde_derive = "1"
serde_json = "1.0"
slug = "0.1.4"
structopt = "0.3.13"

# simple-logging = "2.0.2"